2016/03/03:
Makefile changes, so as to support ocamlbuild 4.03, which seems to have
stricter hygiene rules than previous versions.

2015/12/30:
Prevented an incorrect installation that would take place if USE_OCAMLFIND
was given during "make all" but not during "make install". Added a command
line directive --suggest-ocamlfind.

2015/11/11:
Fixed a severe bug in Menhir 20151110 which (when using the code back-end)
could cause a generated parser to crash. Thanks to ygrek for reporting the
bug.

2015/11/11:
The code produced by version XXXXXXXX of menhir --table can now be linked only
against a matching version of MenhirLib. If an incorrect version of MenhirLib
is installed, the OCaml compiler should complain that
[MenhirLib.StaticVersion.require_XXXXXXXX] is undefined.

2015/11/10:
Optimized the computation of $symbolstartpos, based on a couple of assumptions
about the lexer. (See the manual.)

2015/11/04:
Modified the treatment of %inline so that the positions that are computed are
the same, regardless of whether %inline is used. This property did not hold
until now. It now does. Of course, this means that the positions computed by
the new Menhir are not the same as those computed by older versions of Menhir.

2015/11/04:
Fixed a bug in the treatment of %inline that would lead to an incorrect
position being computed when the caller and callee had a variable by the
same name.

2015/11/04:
Modified Menhir so as to compute the start and end positions in the exact same
way as ocamlyacc. (There used to be a difference in the treatment of epsilon
productions.) Of course, this means that the positions computed by the new
Menhir are not the same as those computed by older versions of Menhir. Added
the keyword $symbolstartpos so as to simulate Parsing.symbol_start_pos()
in the ocamlyacc world. The keyword $startpos sometimes produces a position
that is too far off to the left; $symbolstartpos produces a more accurate
position.

2015/11/04: