@@ -1,3 +1,9 @@
+2016/03/11:
+In the code back-end, generate type annotations when extracting a semantic
+value out of the stack. When working with a semantic value of some function
+type, OCaml would incorrectly warn that this function does not use its
+argument. This warning should now be gone.
+
 2016/03/03:
 Makefile changes, so as to support ocamlbuild 4.03, which seems to have
 stricter hygiene rules than previous versions.
